Profle page user image, Username font fixed, Search on click issue fixed, Blank Name validation

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-info.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-info.less
@@ -25,7 +25,7 @@
         }
 
         .profile-info  a {
-            display: block;
+            display: inline-block;
             color: @profile-info-color;
         }
         .profile-info > ul{
