--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
@@ -171,3 +171,7 @@
     background-color: white;
     border-bottom: 1px solid #777;
 }
+.navbar-right{
+    float:right;
+    margin-right:15px;
+}
