--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
@@ -6,6 +6,8 @@
     text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
     padding:2px 3px;
     color:white;
+    margin-left:5px;
+    margin-right:5px;
 }
 
 .btn-success {
