Authentication on Home and question detail page on qnswering and comment and like

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -1,4 +1,5 @@
-﻿<div class="status-panel">
+﻿<div #logginAnchor></div>
+<div class="status-panel">
     <img *ngIf="questionObj?.answers[0]?.likes?.length<1" (click)="submitLike(answerObj?.id,questionObj.id)" src='../images/fade-logo.png' onmouseover="this.src = '../images/like-logo.png';" onmouseout="this.src = '../images/fade-logo.png';" />
     <img *ngIf="questionObj?.answers[0]?.likes?.length>0" src='../images/like-logo.png' />
     <a href="#" data-toggle="modal" attr.data-target="#likeModal{{commentId}}" class="number-box status-line" (click)="showLikeUserDetails()"> {{isQuestion?(questionObj.likes.length):(answerObj?.likes?.length)}}</a>
