--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -10,6 +10,7 @@
 
 <div #answerAnchor></div>
 <div #questionReport></div>
+<div #logginAnchor></div>
 
 <div class="left-panel">
     <related-question-left-menu></related-question-left-menu>
