--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
@@ -1,4 +1,5 @@
-﻿<div class="row">
+﻿<div #logginAnchor></div>
+<div class="row">
     <div class="collapse comment-panel" id="questionComment{{commentId}}">
         <form #commentForm="ngForm" class="form-horizontal " role="form">
             <div class="comment-input">
