--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/question-panel/question-panel.component.html
@@ -2,6 +2,7 @@
     <div #dialogAnchor></div>
     <div #answerAnchor></div>
     <div #questionReport></div>
+    <div #logginAnchor></div>
 </div>
 <div class="panel-article">
     <div class="questions-container">
