Search : on submit show not logged in

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -1,4 +1,5 @@
-﻿<div [ngClass]="placeBottom" id="search-box" (click)="handleClick($event)">
+﻿<div #logginAnchor></div>
+<div [ngClass]="placeBottom" id="search-box" (click)="handleClick($event)">
     <div class="center-width" id="adv-search">
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="z-header" role="form" id="search-panel">
             <div class="icon-container">
