--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
@@ -30,7 +30,7 @@
     <div *ngIf="userInfoDetails">
         <ul style="list-style-type: none;">
             <li>
-                <img class="user-image " src="../../../../profile/{{userInfoDetails?.imageUrl}}" />
+                <img class="user-image " src="{{userInfoDetails?.imageUrl}}" />
 
                 <div class="user-info">
                     <div class="user-detail">
@@ -50,16 +50,16 @@
                 </li>
                 <li *ngIf="userInfoDetails?.questionCount!=0"><i class="fa-li fa fa-question"></i>Questions: {{userInfoDetails?.questionCount}}</li>
 
-                <li *ngIf="userInfoDetails?.education!=''">
+                <li *ngIf="userInfoDetails?.education">
                     <i class="fa-li fa fa-university"></i>Education: {{userInfoDetails?.education}}
                 </li>
-                <li *ngIf="userInfoDetails?.employment!=''">
+                <li *ngIf="userInfoDetails?.employment">
                     <i class="fa-li fa fa-info-circle"></i>employment: {{userInfoDetails?.employment}}
                 </li>
-                <li *ngIf="userInfoDetails?.place!=''">
+                <li *ngIf="userInfoDetails?.place">
                     <i class="fa-li fa fa-home "></i>Place: {{userInfoDetails?.place}}
                 </li>
-                <li *ngIf="userInfoDetails?.otherExperience!=''">
+                <li *ngIf="userInfoDetails?.otherExperience">
                     <i class="fa-li fa fa-cog"></i>otherExperience: {{userInfoDetails?.otherExperience}}
                 </li>
 
