--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
@@ -134,8 +134,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-controller="Home" asp-action="Index"><img class="logo" src="../images/LOGO CUADRADO.png" /></a>
-                <a asp-controller="Home" asp-action="Index" class="navbar-brand">
+                <a href="http://altap.azurewebsites.net/"><img class="logo" src="../images/LOGO CUADRADO.png" /></a>
+                <a href="http://altap.azurewebsites.net/" class="navbar-brand">
                     <font style="color: #000000;">
                         Altaperspectiva
                     </font>
