--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/VirtualStore/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/VirtualStore/Index.cshtml
@@ -82,35 +82,17 @@
                     </div>
                     
                 </div>
-                @*@if (Model.ScreenShotImage != null)
-                    {
-                        <div class="upload-box">
-                            @Html.TextBoxFor(model => model.ScreenShotImage, new { type = "file", @class = "hidden-file-input" })
-                            @Html.ValidationMessageFor(model => model.ScreenShotImage)
-                            <h1>+</h1>
-                            <p>IMAGEN</p>
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="upload-box">
-                            @Html.TextBoxFor(model => model.ScreenShotImage, new { type = "file", @class = "hidden-file-input" })
-                           <img src=""/>
-                        </div>
-                    }*@
 
             </div>
             <div class="col-md-7">
                 @Html.TextBoxFor(model => model.Price, new { @placeholder = "Prize", @class = "form-control input-lg bottm-margin", @type = "number" })
                 @Html.ValidationMessageFor(model => model.Price)
-                @*<input placeholder="Prize" class="form-control input-lg bottm-margin" />*@
                 @Html.TextBoxFor(model => model.Title, new { @placeholder = "Title", @class = "form-control input-lg bottm-margin" })
                 @Html.ValidationMessageFor(model => model.Title)
                 @Html.TextAreaFor(model => model.Description, new { @placeholder = "Description", @class = "form-control bottm-margin input-lg", @rows = "3" })
                 @Html.TextBoxFor(model => model.ProductFile, new { type = "file", @class = "form-control input-lg bottm-margin" })
                 @Html.ValidationMessageFor(model => model.ProductFile)
-                @*<input placeholder="Title" class="form-control input-lg bottm-margin" />*@
-                @*<textarea placeholder="Description" class="form-control bottm-margin input-lg" rows="5"></textarea>*@
+                
             </div>
         </div>
         <div class="btn-group-lg btn-container">
@@ -137,6 +119,9 @@
         <th>
             @Html.DisplayNameFor(model => model.ScreenShotImage)
         </th>
+        <th>
+            Created Date
+        </th>
         <th></th>
     </tr>
 
@@ -157,6 +142,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ScreenShotFileName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CreatedOn)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", "VirtualStore", new { id = item.Id, Area = "Admin" }, null) |
