Blog and blog post empty string validation, Log in local storeage issue fix, direct question log in validation fix

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/direct-question/direct-question.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/direct-question/direct-question.component.html
@@ -15,6 +15,7 @@
         margin-top:8px;
     }
 </style>
+<div #logginAnchor></div>
 <form>
     <div class="form-group from-md">
         <input type="text" class="form-control bottom-margin" placeholder="Haz tu pregunta aquí o busca tus preguntas aquí" id="title" autocomplete="off"
