--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/virtual-store/item-dialog.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/virtual-store/item-dialog.component.html
@@ -48,7 +48,7 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="item-detail-container">
-                <img src="{{screenShotPath}}/{{virtualStore.screenShotFileName}}" class="item-img-lg" />
+                <img src="{{virtualStore.screenShotFileName}}" class="item-img-lg" />
                 <div class="item-info">
                     <h1>{{virtualStore.price}}$</h1>
                     <h2>{{virtualStore.title}}</h2>
