--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -39,7 +39,7 @@
                 <img class="user-image " src="../../../../profile/Anonymous.png" />
             </div>
 
-            <div class="checkbox-container">
+            <div *ngIf="!isDraft" class="checkbox-container">
                 <input type="checkbox" #answerAnonymous [checked]=false (change)="onChange(answerAnonymous.checked)" /> <label>Preguntar Anonimo</label>
                 <a *ngIf="!isFullScreen" [routerLink]="['/question/questionfullscreen',question.id]">Go full screen</a>
             </div>
@@ -53,8 +53,9 @@
     </div>
     <div class="modal-footer">
         <div style="float:left;color:#737373;line-height: 34px;">
-            <button type="button" (click)="submitAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Submit</button>
-            <button type="button" (click)="submitAnswerAsDraft(question.id)" data-dismiss="modal" class="btn btn-primary">Save As Draft</button>
+            <button *ngIf="isDraft" type="button" (click)="submitAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Submit</button>
+            <button *ngIf="!isDraft" type="button" (click)="submitAnswerAsDraft(question.id)" data-dismiss="modal" class="btn btn-primary">Save As Draft</button>
+            <button *ngIf="isDraft" type="button" (click)="submitAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Publish Answer</button>
         </div>
         <div class="social-share">
             <a href="https://www.facebook.com/sharer/sharer.php?u={{question.shareUrl}}"
