akash:Style fixed in admin pannel

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Questions.Domain.Category>
-<style>
+@*<style>
     .row {
         margin-top: 58px;
         margin-left: -434px;
@@ -17,7 +17,7 @@
     .table-responsive {
         width: 605px;
     }
-</style>
+</style>*@
 
 <div class="row">
     <div class="col-md-4">
